<resources>
    <string name="app_name">Saveo</string>
    <string name="saveo">Saveo</string>
    <string name="now_showing">Now Showing</string>
    <string name="movies">Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="hi_there_my_name_is_ishwar">Hi There my name is Ishwar Hi There my name is Ishwar Hi There my name is Ishwar  Hi There my name is Ishwar Hi There my name is Ishwar</string>
    <string name="book_now">BOOK NOW</string>
    <string name="the_hateful_eight">The Hateful Eight</string>
    <string name="r_3h_7min_30_dec_2015">R | 3h 7min | 30 Dec, 2015</string>
    <string name="reviews_10_critics_2345_user">Reviews: 10(Critics) | 2345(User)</string>
    <string name="_4_5">4.5</string>
</resources>