<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".ui.views.MovieDetailActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/synopsis"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1" />

    <TextView
        android:id="@+id/tvSynopsis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:lineSpacingExtra="@dimen/_9sdp"
        android:scrollbars="vertical"
        android:text="@string/hi_there_my_name_is_ishwar"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cardView1"
        app:layout_constraintStart_toStartOf="@id/TextView"
        app:layout_constraintTop_toBottomOf="@id/TextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:elevation="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_10sdp"
        app:contentPadding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBookNow"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/book_now"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_15sdp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bgColor"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_back_ios"
            android:drawableEnd="@drawable/ic_upload_icon"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:elevation="@dimen/_10sdp"
            android:transitionName="image_transaction"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            app:layout_goneMarginEnd="@dimen/_2sdp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivMoviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/pic" />

                <ImageButton
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_play_circle_outline_24" />
            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/the_hateful_eight"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardView2"
            app:layout_constraintTop_toBottomOf="@id/tvHeader" />

        <TextView
            android:id="@+id/tvTiming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/r_3h_7min_30_dec_2015"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/tvMovieName"
            app:layout_constraintStart_toStartOf="@id/tvMovieName"
            app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

        <com.cunoraz.tagview.TagView
            xmlns:tagview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tagContainerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="@id/tvTiming"
            app:layout_constraintStart_toStartOf="@id/tvTiming"
            app:layout_constraintTop_toBottomOf="@id/tvTiming"
            tagview:lineMargin="@dimen/_5sdp"
            tagview:tagMargin="@dimen/_5sdp"
            tagview:textPaddingLeft="@dimen/_5sdp"
            tagview:textPaddingTop="@dimen/_3sdp"
            tagview:textPaddingRight="@dimen/_5sdp"
            tagview:textPaddingBottom="@dimen/_3sdp" />

        <RatingBar
            android:id="@+id/starRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:numStars="5"
            app:layout_constraintBottom_toTopOf="@id/tvReview"
            app:layout_constraintStart_toStartOf="@id/tvMovieName" />

        <TextView
            android:id="@+id/tvStarRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/_4_5"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="@id/starRatingBar"
            app:layout_constraintStart_toEndOf="@+id/starRatingBar" />

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/reviews_10_critics_2345_user"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="@id/tvMovieName"
            app:layout_constraintStart_toStartOf="@id/tvMovieName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>